--- a/project/project.html
+++ b/project/project.html
@@ -29,8 +29,30 @@ Number: 10654976
         <!-- Javascriptfile d3LinkedViews -->
         <script type="text/javascript" src="javascript/project.js"></script>
 
-        <div id="container1" style="position: relative; width: 1150px; height: 680px;"></div>
+        <!-- header -->
+        <div class="jumbotron">
+          <div class="container text-center">
+            <h1>The fat, the poor and the unhappy people</h1>      
+            <p></p>
+          </div>
+        </div>
 
-        <div id="container2"></div>        
+        <div id="container1"></div>
+
+        <div class="barcharts">
+          <div id="container2"></div>
+          <div id="container3"></div>
+        </div>
+        
+<!-- 
+        <div id="container2"></div>
+        <div id="container3"></div> -->
+
+        <!-- HELP -->
+        <!-- footer -->
+        <!-- <footer class="container-fluid text-center">
+          <p><a href="http://databank.worldbank.org/data" target="_blank">&#xA9 World Databank</a></p>  
+        </footer>    -->     
     </body>
+
 </html>
