--- a/project/project.html
+++ b/project/project.html
@@ -21,6 +21,8 @@ Number: 10654976
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
         <!-- Datamaps javascript -->
         <script src="javascript/datamaps.world.min.js"></script>
+        <!-- Tooltip -->
+        <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
         <!-- Stylesheet Project -->
         <link rel="stylesheet" type="text/css" href="css/project.css"/>
     </head>
@@ -43,6 +45,12 @@ Number: 10654976
           <div id="container2"></div>
           <div id="container3"></div>
         </div>
+
+        <!-- Buttons -->
+        <div class="btn=group">
+
+            <button type="button" class="btn btn-default">2014</button>
+        </div>
         
 <!-- 
         <div id="container2"></div>
@@ -50,9 +58,9 @@ Number: 10654976
 
         <!-- HELP -->
         <!-- footer -->
-        <!-- <footer class="container-fluid text-center">
+        <footer class="container-fluid text-center">
           <p><a href="http://databank.worldbank.org/data" target="_blank">&#xA9 World Databank</a></p>  
-        </footer>    -->     
+        </footer>        
     </body>
 
 </html>
