--- a/project/project.html
+++ b/project/project.html
@@ -59,6 +59,7 @@ Number: 10654976
         <div class="map table">
             <div id="container1"></div>
             <div id="container4">
+                <input type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search for a country..">
                 <style type="text/css">
                     body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300; padding: 20px;}
                     th { text-align: left; }
