--- a/project/project.html
+++ b/project/project.html
@@ -32,48 +32,88 @@ Number: 10654976
         <script type="text/javascript" src="javascript/project.js"></script>
 
         <!-- header -->
-        <div class="jumbotron">
+    <!--     <div class="jumbotron">
           <div class="container text-center">
             <h1>The fat, the poor and the unhappy people</h1>      
             <p></p>
           </div>
-        </div>
+        </div> -->
+        <div class="container">
+            <div class="row">
 
-        <!-- Buttons -->
-        <div class="btn-group">
-            <button type="button" value="2010" class="btn btn-default">2010</button>
-            <button type="button" value="2014" class="btn btn-default">2014</button>
-        </div>
+                <div class="col-md-8">
+                    <div id="container1"></div>
+                </div>
 
-        <div class="btn-group">
-            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                Category <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-                <li><a class="m" value="Obesity" selected='True' href="#">Obesity</a></li>
-                <li><a class="m" value="Overweight" href="#">Overweight</a></li>
-                <li><a class="m" value="BMI" href="#">BMI</a></li>
-            </ul>
-        </div>
-
-        <div class="map table">
-            <div id="container1"></div>
-            <div id="container4">
-                <input type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search for a country..">
-                <style type="text/css">
-                    body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300; padding: 20px;}
-                    th { text-align: left; }
-                    th, td { padding: 0 1em 0.5ex 0;}
-                    th.center, td.center { text-align: center; }
-                    th.num, td.num { text-align: right; }
-                </style>
+                <div class="col-md-4">
+                    <div id="container4">
+                        <input type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search for a country..">
+                        <style type="text/css">
+                            body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300; padding: 20px;}
+                            th { text-align: left; }
+                            th, td { padding: 0 1em 0.5ex 0;}
+                            th.center, td.center { text-align: center; }
+                            th.num, td.num { text-align: right; }
+                        </style>
+                    </div>
+                </div>
             </div>
+
+            <div class="row">
+                <div class="col-md-6"> 
+                    <div id="container2"></div>
+                </div>
+
+                <div class="col-md-6"> 
+                    <div id="container3"></div>
+                </div>
+
+            </div>
+
         </div>
 
-        <div class="barcharts">
+
+        <!-- <div class="row">
+            <div class="col-sm-4"> -->
+                <!-- Buttons -->
+            <!-- <div class="btn-group">
+                <button type="button" value="2010" class="btn btn-default">2010</button>
+                <button type="button" value="2014" class="btn btn-default">2014</button>
+            </div> -->
+
+            <!-- <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    Category <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a class="m" value="Obesity" selected='True' href="#">Obesity</a></li>
+                    <li><a class="m" value="Overweight" href="#">Overweight</a></li>
+                    <li><a class="m" value="BMI" href="#">BMI</a></li>
+                </ul>
+            </div> -->
+
+            <!-- <div class="map table"> -->
+                <!-- <div id="container1"></div> -->
+            <!-- </div> -->
+            <!-- <div class="col-sm-4">
+                <div id="container4">
+                    <input type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search for a country..">
+                    <style type="text/css">
+                        body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300; padding: 20px;}
+                        th { text-align: left; }
+                        th, td { padding: 0 1em 0.5ex 0;}
+                        th.center, td.center { text-align: center; }
+                        th.num, td.num { text-align: right; }
+                    </style>
+                </div>
+            </div> -->
+            <!-- </div> -->
+        <!-- </div> -->
+
+  <!--       <div class="barcharts">
           <div id="container2"></div>
           <div id="container3"></div>
-        </div>
+        </div> -->
 
 <!-- 
         <div id="container2"></div>
@@ -81,9 +121,9 @@ Number: 10654976
 
         <!-- HELP -->
         <!-- footer -->
-        <footer class="container-fluid text-center">
+    <!--     <footer class="container-fluid text-center">
           <p><a href="http://databank.worldbank.org/data" target="_blank">&#xA9 World Databank</a></p>  
-        </footer>        
+        </footer>      -->   
     </body>
 
 </html>
