--- a/project/project2.html
+++ b/project/project2.html
@@ -29,23 +29,18 @@ Number: 10654976
 
     <body>
         <!-- Javascriptfile d3LinkedViews -->
-        <script type="text/javascript" src="javascript/project.js"></script>
+        <script type="text/javascript" src="javascript/project2.js"></script>
 
         <!-- header -->
-        
-        <!-- <div class="row">
-            <div class="col-md-12">
-                <div class="jumbotron">
-                  <div class="container text-center">
-                    <h1>The fat, the poor and the unhappy people</h1>      
-                    <p></p>
-                  </div>
-                </div>
-            </div>
+    <!--     <div class="jumbotron">
+          <div class="container text-center">
+            <h1>The fat, the poor and the unhappy people</h1>      
+            <p></p>
+          </div>
         </div> -->
-
         <div class="container">
             <div class="row">
+
                 <div class="col-md-8">
 
                     <!-- Buttons -->
@@ -61,8 +56,8 @@ Number: 10654976
                     </div>
 
                     <div class="btn-group">
-                        <button type="button" value="2010" class="btn btn-default map" id='ten'>2010</button>
-                        <button type="button" value="2014" class="btn btn-default map" id='fourteen'>2014</button>
+                        <button type="button" value="2010" class="btn btn-default">2010</button>
+                        <button type="button" value="2014" class="btn btn-default">2014</button>
                     </div>
 
                     <div id="container1"></div>
@@ -83,24 +78,6 @@ Number: 10654976
             </div>
 
             <div class="row">
-                <div class="col-md-6">
-
-                    <div class="btn-group">
-                        <button type="button" value="GDP" class="btn btn-default bar" id='bGDP'>GDP</button>
-                        <button type="button" value="Happiness" class="btn btn-default bar" id='bHappiness'>Happiness</button>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-
-                    <div class="btn-group">
-                        <button type="button" value="GDP" class="btn btn-default scatter" id='sGDP'>GDP</button>
-                        <button type="button" value="Happiness" class="btn btn-default scatter" id='sHappiness'>Happiness</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
                 <div class="col-md-6"> 
                     <div id="container2"></div>
                 </div>
@@ -111,16 +88,18 @@ Number: 10654976
 
             </div>
 
-        </div>
-
-        <!-- <div class="row">
-            <div class="col-md-12">
-                <footer class="container-fluid text-center">
-                  <p><a href="http://databank.worldbank.org/data" target="_blank">&#xA9 World Databank</a></p>  
-                </footer>        
+            <div class="row">
+                <div class="col-md-12"> 
+                    <div id="container5"></div>
+                </div>
             </div>
-        </div> -->
+
+        </div>
         <!-- HELP -->
+        <!-- footer -->
+    <!--     <footer class="container-fluid text-center">
+          <p><a href="http://databank.worldbank.org/data" target="_blank">&#xA9 World Databank</a></p>  
+        </footer>      -->   
     </body>
 
 </html>
