--- a/project/project.html
+++ b/project/project.html
@@ -61,8 +61,8 @@ Number: 10654976
                     </div>
 
                     <div class="btn-group">
-                        <button type="button" value="2010" class="btn btn-default map" id='ten'>2010</button>
-                        <button type="button" value="2014" class="btn btn-default map" id='fourteen'>2014</button>
+                        <button type="button" value="0" class="btn btn-default map" id='map0'>2010</button>
+                        <button type="button" value="1" class="btn btn-default map" id='map1'>2014</button>
                     </div>
 
                     <div id="container1"></div>
@@ -86,16 +86,16 @@ Number: 10654976
                 <div class="col-md-6">
 
                     <div class="btn-group">
-                        <button type="button" value="GDP" class="btn btn-default bar" id='bGDP'>GDP</button>
-                        <button type="button" value="Happiness" class="btn btn-default bar" id='bHappiness'>Happiness</button>
+                        <button type="button" value="0" class="btn btn-default bar" id='bar0'>GDP</button>
+                        <button type="button" value="1" class="btn btn-default bar" id='bar1'>Happiness</button>
                     </div>
                 </div>
 
                 <div class="col-md-6">
 
                     <div class="btn-group">
-                        <button type="button" value="GDP" class="btn btn-default scatter" id='sGDP'>GDP</button>
-                        <button type="button" value="Happiness" class="btn btn-default scatter" id='sHappiness'>Happiness</button>
+                        <button type="button" value="0" class="btn btn-default scatter" id='scatter0'>GDP</button>
+                        <button type="button" value="1" class="btn btn-default scatter" id='scatter1'>Happiness</button>
                     </div>
                 </div>
             </div>
