--- a/project/backup.html
+++ b/project/backup.html
@@ -23,17 +23,13 @@ Number: 10654976
         <script src="javascript/datamaps.world.min.js"></script>
         <!-- Tooltip -->
         <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-        <!-- Javascript files project -->
-        <script type="text/javascript" src="javascript/helper.js"></script>
-        <script type="text/javascript" src="javascript/worldmap.js"></script>
-        <script type="text/javascript" src="javascript/barchart.js"></script>
-        <script type="text/javascript" src="javascript/scatterplot.js"></script>
-        <script type="text/javascript" src="javascript/table.js"></script>
         <!-- Stylesheet Project -->
         <link rel="stylesheet" type="text/css" href="css/project.css"/>
     </head>
 
     <body>
+        <!-- Javascriptfile d3LinkedViews -->
+        <script type="text/javascript" src="javascript/project.js"></script>
 
         <!-- header -->
         
@@ -124,9 +120,7 @@ Number: 10654976
                 </footer>        
             </div>
         </div> -->
-
-        <!-- Javascriptfile index.js -->
-        <script type="text/javascript" src="javascript/index.js"></script>
+        <!-- HELP -->
     </body>
 
 </html>
