--- a/project/project.html
+++ b/project/project.html
@@ -23,13 +23,17 @@ Number: 10654976
         <script src="javascript/datamaps.world.min.js"></script>
         <!-- Tooltip -->
         <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+        <!-- Javascript files project -->
+        <script type="text/javascript" src="javascript/helper.js"></script>
+        <script type="text/javascript" src="javascript/worldmap.js"></script>
+        <script type="text/javascript" src="javascript/barchart.js"></script>
+        <script type="text/javascript" src="javascript/scatterplot.js"></script>
+        <script type="text/javascript" src="javascript/table.js"></script>
         <!-- Stylesheet Project -->
         <link rel="stylesheet" type="text/css" href="css/project.css"/>
     </head>
 
     <body>
-        <!-- Javascriptfile d3LinkedViews -->
-        <script type="text/javascript" src="javascript/project.js"></script>
 
         <!-- header -->
         
@@ -120,7 +124,9 @@ Number: 10654976
                 </footer>        
             </div>
         </div> -->
-        <!-- HELP -->
+
+        <!-- Javascriptfile index.js -->
+        <script type="text/javascript" src="javascript/index.js"></script>
     </body>
 
 </html>
