--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@ Number: 10654976
 <html>
     <head>
         <!-- D3 -->
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+        <script type="text/javascript" src="project/javascript/libraries/d3.min.js"></script>
         <!-- Topojson -->
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
+        <script type="text/javascript" src="project/javascript/libraries/topojson.min.js"></script>
         <!-- jQuery -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
         <!-- Bootstrap javascript -->
-        <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="project/javascript/libraries/bootstrap.min.js"></script>
         <!-- Bootstrap stylesheet -->
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="project/javascript/libraries/bootstrap.min.css"/>
         <!-- Datamaps javascript -->
         <script src="project/javascript/datamaps.world.min.js"></script>
         <!-- Tooltip -->
-        <script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+        <!-- <script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script> -->
         <!-- Javascript files project -->
         <script type="text/javascript" src="project/javascript/helper.js"></script>
         <script type="text/javascript" src="project/javascript/worldmap.js"></script>
