--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@ Number: 10654976
         <!-- Bootstrap javascript -->
         <script type="text/javascript" src="project/javascript/libraries/bootstrap.min.js"></script>
         <!-- Bootstrap stylesheet -->
-        <link rel="stylesheet" href="project/javascript/libraries/bootstrap.min.css"/>
+        <script rel="stylesheet" href="project/javascript/libraries/bootstrap.min.css"></script>
         <!-- Datamaps javascript -->
         <script src="project/javascript/datamaps.world.min.js"></script>
-        <!-- Tooltip -->
-        <!-- <script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script> -->
         <!-- Javascript files project -->
         <script type="text/javascript" src="project/javascript/helper.js"></script>
         <script type="text/javascript" src="project/javascript/worldmap.js"></script>
