--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Number: 10654976
         <!-- Bootstrap javascript -->
         <script type="text/javascript" src="project/javascript/libraries/bootstrap.min.js"></script>
         <!-- Bootstrap stylesheet -->
-        <script rel="stylesheet" href="project/javascript/libraries/bootstrap.min.css"></script>
+        <link rel="stylesheet" href="project/javascript/libraries/bootstrap.min.css"/>
         <!-- Datamaps javascript -->
         <script src="project/javascript/datamaps.world.min.js"></script>
         <!-- Javascript files project -->
