--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@ Number: 10654976
 
         <!-- header -->
         
-        <!-- <div class="row">
+        <div class="row">
             <div class="col-md-12">
                 <div class="jumbotron">
                   <div class="container text-center">
-                    <h1>The fat, the poor and the unhappy people</h1>      
-                    <p></p>
+                    <h1>The Fat, the Poor and the Unhappy</h1>      
+                    <p>The body weight of the population in a country might have different relationships with prosperity of a country, commonly measured in terms of its annual per capita Gross Domestic Product (GDP), and happiness of a population. On this webpage the relationship between the body weight of a population and the level of income and happiness is examined. In the worldmap the BMI per country and the percentages of overweight (BMI &#8805 25) and obesity (BMI &#8805 30) are displayed. You can hover over a country in the worldmap to see the level of income and happiness relative to other countries both in the barchart and scatterplot. You can also look for a specific country in the table and sort the table from lowest to highest for all the different categories by clicking on the category in the header of the table.</p>
                   </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <div class="container">
             <div class="row">
@@ -115,13 +115,13 @@ Number: 10654976
 
         </div>
 
-        <!-- <div class="row">
+        <div class="row">
             <div class="col-md-12">
                 <footer class="container-fluid text-center">
-                  <p><a href="http://databank.worldbank.org/data" target="_blank">&#xA9 World Databank</a></p>  
+                  <p>Made by Lotte Slim, 10654976</p>  
                 </footer>        
             </div>
-        </div> -->
+        </div>
 
         <!-- Main Javascript-->
         <script type="text/javascript" src="project/javascript/index.js"></script>
