--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Number: 10654976
         <!-- Bootstrap stylesheet -->
         <link rel="stylesheet" href="project/javascript/libraries/bootstrap.min.css"/>
         <!-- Stylesheet Project -->
-        <link rel="stylesheet" type="text/css" href="project/css/project.css"/>
+        <link rel="stylesheet" type="text/css" href="project/css/index.css"/>
         <!-- D3 -->
         <script type="text/javascript" src="project/javascript/libraries/d3.min.js"></script>
         <!-- Topojson -->
